tests/fail/parse-error-004.virtue
if = 42

# error: parse error
#  --> test.virtue:1:4
#    |
#  1 | if = 42
#    |    ^ expected expression
#
